@@ -1,3 +1,3 @@
 jobid	jobname	prog	num_segs	num_frames	maxvmem	cpu	exit_status
 (%[0-9]+%)	vit0.identifydir.(%[0-9a-f]{32}%)	gmtkViterbi	4	184355	(%[0-9]+(?:\.[0-9]+)?%)	(%[0-9]+(?:\.[0-9]+)?%)	0
-(%[0-9]+%)	jt0.identifydir.(%[0-9a-f]{32}%)	gmtkViterbi	4	184355	(%[0-9]+(?:\.[0-9]+)?%)	(%[0-9]+(?:\.[0-9]+)?%)	0
+(%[0-9]+%)	jt0.identifydir.(%[0-9a-f]{32}%)	gmtkJT	4	184355	(%[0-9]+(?:\.[0-9]+)?%)	(%[0-9]+(?:\.[0-9]+)?%)	0
